alignment fix

--- a/src/app/styles/select.module.css
+++ b/src/app/styles/select.module.css
@@ -8,6 +8,8 @@
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
+		/* reser from <button> styles */
+		text-align: left;
 	}
 }
 
